successful call of the API ressource